# dreamy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py
app/templates/: index.html
tests/: test_main.py
