[project]
name = "dreamy-downloader"
version = "0.1.0"
description = "Minimal FastAPI proxy around yt-dlp with streaming downloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "trio",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN", "ASYNC", "S"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff.lint.per-file-ignores]
"tests/test_main.py" = ["ANN", "S101"]
